# tasty-dumbcheck

./: dumbcheck.cabal  stack-8.0.yaml  stack-8.2.yaml  stack.yaml  tasty-dumbcheck.cabal
Test/: DumbCheck.hs
Test/Tasty/: DumbCheck.hs
tests/: tasty.hs
