name:                dumbcheck
version:             0.1
synopsis:            Dumb property testing
description:
  Worse is better.
homepage:            https://github.com/jdnavarro/dumbcheck
bug-reports:         https://github.com/jdnavarro/dumbcheck/issues
license:             BSD3
license-file:        LICENSE
author:              Danny Navarro
maintainer:          Danny Navarro <j@dannynavarro.net>
stability:           experimental
copyright:           Copyright (C) 2015 J. Daniel Navarro
category:            Web
build-type:          Simple
cabal-version:       >=1.10
tested-with:         GHC == 7.6.3, GHC == 7.8.4, GHC == 7.10.2
extra-source-files:  README.md CHANGELOG.md stack.yaml

source-repository head
  type: git
  location: git://github.com/jdnavarro/dumbcheck.git

library
  default-language:    Haskell2010
  ghc-options:         -Wall
  exposed-modules:     Test.DumbCheck
  build-depends:       base >=4.6 && <4.9
